Initial web server and build worker

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basinix"
+name = "basinix-server"
 version = "0.1.0"
 authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
 edition = "2018"
