--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,4 +10,5 @@ repository = "https://github.com/jonringer/basinix"
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
 warp = "0.3"
