--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basinix-shared"
+name = "basinix_shared"
 version = "0.1.0"
 authors = [
   "Jonathan Ringer <jonringer117@gmail.com>",
