--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,6 +15,8 @@ env_logger = "0.8"
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 warp = "0.3"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+diesel = { version = "1.4", features = [ "sqlite", "extras"] }
 
 basinix_shared = { path = "../shared" }
