--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
 .direnv/
-
+.idea
+.vscode
 
 # Added by cargo
 
+debug/
 /target
 result*
+
+**/*.rs.bk
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
