--- a/evaluator/Cargo.toml
+++ b/evaluator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basinix-evaluator"
+name = "basinix_evaluator"
 version = "0.1.0"
 authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
 edition = "2018"
@@ -8,4 +8,14 @@ edition = "2018"
 
 [dependencies]
 bincode = "^1.3"
+log = "0.4"
+env_logger = "0.8"
 basinix_shared = { path = "../shared" }
+
+[lib]
+name = "basinix_evaluator"
+path = "src/lib.rs"
+
+[[bin]]
+name = "basinix_evaluator_runner"
+path = "src/main.rs"
