--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = "1.0"
 diesel = { version = "1.4", features = [ "sqlite", "extras"] }
 
 basinix_shared = { path = "../shared" }
+basinix_evaluator = { path = "../evaluator" }
