--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/jonringer/basinix"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "^2.0"
 chrono = "0.4"
 log = "0.4"
 env_logger = "0.8"
