--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -15,3 +15,5 @@ log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
+lazy_static = "^0.1"
+dirs = "^3.0"
