Initial configuration support
- basinix_server -> basinix-server
- Add initial cli to server
- Initial evaluations of PRs

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basinix_server"
+name = "basinix-server"
 version = "0.1.0"
 authors = ["Jonathan Ringer <jonringer117@gmail.com>"]
 edition = "2018"
@@ -13,6 +13,7 @@ clap = "^2.0"
 chrono = "0.4"
 log = "0.4"
 env_logger = "0.8"
+toml = "^0.5.0"
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 warp = "0.3"
