--- a/evaluator/Cargo.toml
+++ b/evaluator/Cargo.toml
@@ -9,8 +9,13 @@ edition = "2018"
 [dependencies]
 bincode = "^1.3"
 log = "0.4"
+chrono = "0.4"
 env_logger = "0.8"
 basinix_shared = { path = "../shared" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+tokio = { version = "1.0", features = ["process"] }
 
 [lib]
 name = "basinix_evaluator"
