--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -11,7 +11,7 @@ description = "Shared dependencies between the server and workers"
 
 [dependencies]
 bincode = "1.3.1"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-
+sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
