--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0"
 sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
 lazy_static = "1.4"
 dirs = "^3.0"
+derive_more = "0.99.17"
