Attempt to unify error types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ members = [
   "evaluator",
 ]
 
+[workspace.dependencies]
+reqwest = { version = "0.11", features = [ "json", "blocking" ]}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
