--- a/evaluator/Cargo.toml
+++ b/evaluator/Cargo.toml
@@ -14,7 +14,7 @@ env_logger = "0.8"
 basinix_shared = { path = "../shared" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { workspace = true }
 tokio = { version = "1.0", features = ["process"] }
 
 [lib]
