--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -12,8 +12,9 @@ description = "Shared dependencies between the server and workers"
 [dependencies]
 bincode = "1.3.1"
 log = "0.4"
+reqwest = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { workspace = true }
 sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
 lazy_static = "1.4"
 dirs = "^3.0"
